--- a/SDEV220_M02_CaseStudy.ipynb
+++ b/SDEV220_M02_CaseStudy.ipynb
@@ -74,7 +74,12 @@
     "## the app will stop running, otherwise the program will continue to run. Next it will ask for the user's firstname and current GPA. \n",
     "## A comparison of the GPA will be made to see if the student will fall under the Dean's List with a GPA of 3.5 or greater, or the Honor\n",
     "## Roll with a GPA of 3.25 to 3.49. The output will consist of the student's first name, last name, and a brief message if they meet either\n",
-    "## the Dean's List or Honor Roll criteria. Is the student's GPA is under 3.25 no message will appear and the program will loop until the break sequence is entered.\n",
+    "## the Dean's List or Honor Roll criteria. Is the student's GPA is under 3.25 no message will appear and the program will loop until the break sequence \n",
+    "## is entered.\n",
+    "## variables:\n",
+    "## last_name = the user's last name\n",
+    "## first_name = the user's first name\n",
+    "## gpa = the user's grade point average (GPA)\n",
     "\n",
     "while True:\n",
     "    last_name = input(\"What is your last name? Enter ZZZ to quit.\") \n",
